--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     </nav>
 <body>
     <h2>About me!</h2>
-    <img src="image/Snapchat-651242226.jpg" width="200" height="200"<br>
+    <img src="Snapchat-651242226.jpg" width="200" height="200"<br>
 <h2>Dola-michaels priscilla</h2>
 <h2>Web developer</h2>
 PROFILE<br>
