--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <button><a href="contact.html">Hire Me!</a></button>  
         </div>
         <div class="column-right">
-    </div>
+            <img src="computer"
+        </div>
         </div>
         </div>
     </section>
