--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <button><a href="contact.html">Hire Me!</a></button>  
         </div>
         <div class="column-right">
-            <img src="computer"
-        </div>
+            <img src="image/computer-program-coding-screen.jpg" width="300" height="400">
+    </div>
         </div>
         </div>
     </section>
