--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
     Instagram:prisci4670<br>
 Tiktok:prisci346<br></h5><hr>
 <h2>Fill this form,<br>to gain direct access to me.</h2>
-<form action="/action_page.php">
+<form action="https://formspree.io/f/mblrbozk"
+    method="post">
     <fieldset>
         <legend>Personal information</legend>
         <label for="fname">firstname:</label>
@@ -41,10 +42,9 @@ Tiktok:prisci346<br></h5><hr>
             <option value="other">Other</option>
            </select><br>
            <h5>What do you need my service for?</h5>
-           <form action="/action_page.php"></form>
            <textarea name="message"rows="10" cols="30"></textarea>
            <br>
-        <input type="submit"
+        <input type="submit">
         </form>
 </body
 </html>
